central-api/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: central-api
  namespace: publishing-house
  labels:
    app: central-api
spec:
  to:
    kind: Service
    name: central-api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
